feat(contract-first-api): changed code to be contract first for the api
- added gradle options to generate code from OpenAPI.yaml
- removed hand coded dto and changed to use the generated DTO code
- changed controllers to inherit from generated api to ensure contract adherence
- fixed some issues with the OpenAPI.yaml return types
- updated controllers to return entities
- added docs directory and added a change log and architecture decision registry.
